update payment element version

--- a/vue/package.json
+++ b/vue/package.json
@@ -5,12 +5,12 @@
   "author": "jessica",
   "private": true,
   "scripts": {
-    "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
+    "dev": "webpack-dev-server --hot --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
     "build": "node build/build.js"
   },
   "dependencies": {
-    "airwallex-payment-elements": "0.0.85",
+    "airwallex-payment-elements": "^0.0.96",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
