--- a/vue/package.json
+++ b/vue/package.json
@@ -8,7 +8,7 @@
     "dev": "webpack-dev-server --hot --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
     "build": "node build/build.js",
-    "lint": "eslint \"**/*.{js,ts,tsx}\" "
+    "lint": "eslint \"**/*.{js,vue}\" "
   },
   "dependencies": {
     "airwallex-payment-elements": "^0.1.2",
@@ -31,6 +31,7 @@
     "eslint-config-google": "^0.14.0",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-vue": "^7.1.0",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
