--- a/vue/package.json
+++ b/vue/package.json
@@ -36,6 +36,8 @@
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
+    "husky": "^4.3.0",
+    "lint-staged": "^10.5.1",
     "node-notifier": "^5.1.2",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
@@ -59,6 +61,16 @@
   "engines": {
     "node": ">= 6.0.0",
     "npm": ">= 3.0.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged && yarn lint"
+    }
+  },
+  "lint-staged": {
+    "src/**/*.{js,vue,json,css,scss,md}": [
+      "prettier --write"
+    ]
   },
   "prettier": {
     "printWidth": 120,
