--- a/vue/package.json
+++ b/vue/package.json
@@ -11,7 +11,7 @@
     "lint": "eslint \"**/*.{js,vue}\" "
   },
   "dependencies": {
-    "airwallex-payment-elements": "^0.1.2",
+    "airwallex-payment-elements": "*",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
