--- a/react/package.json
+++ b/react/package.json
@@ -4,11 +4,21 @@
   "private": true,
   "dependencies": {
     "airwallex-payment-elements": "*",
+    "babel-eslint": "^10.1.0",
+    "eslint-config-google": "^0.14.0",
+    "eslint-config-prettier": "^7.1.0",
+    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0"
+  },
+  "devDependencies": {
+    "eslint": "^7.16.0",
+    "eslint-plugin-prettier": "^3.3.0",
+    "prettier": "^2.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
