chore: [APAF-1316] auto upgrade elements to latest ver

--- a/integrations/angular/package.json
+++ b/integrations/angular/package.json
@@ -17,7 +17,7 @@
     "@angular/platform-browser": "~11.0.0",
     "@angular/platform-browser-dynamic": "~11.0.0",
     "@angular/router": "~11.0.0",
-    "airwallex-payment-elements": "0.2.11",
+    "airwallex-payment-elements": "*",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
