--- a/integrations/react-ts/package.json
+++ b/integrations/react-ts/package.json
@@ -6,7 +6,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
-    "airwallex-payment-elements": "*",
+    "airwallex-payment-elements": "^0.2.49",
     "confusing-browser-globals": "^1.0.10",
     "eslint-config-google": "^0.14.0",
     "eslint-config-prettier": "^7.1.0",
@@ -20,7 +20,6 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
     "lint": "eslint \"**/*.{js,ts,tsx}\" "
   },
   "browserslist": {
