--- a/integrations/react/package.json
+++ b/integrations/react/package.json
@@ -13,18 +13,18 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router": "^5.2.0",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.0"
+    "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
     "eslint": "^7.16.0",
     "eslint-plugin-prettier": "^3.3.0",
-    "prettier": "^2.2.1"
+    "prettier": "^2.2.1",
+    "react-dev-utils": "^11.0.4",
+    "react-scripts": "^4.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
-    "eject": "react-scripts eject"
+    "build": "react-scripts build"
   },
   "eslintConfig": {
     "extends": [
