--- a/integrations/react/package.json
+++ b/integrations/react/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "airwallex-payment-elements": "*",
+    "airwallex-payment-elements": "latest",
     "axios": "^0.23.0",
     "babel-eslint": "^10.1.0",
     "eslint-config-google": "^0.14.0",
