--- a/package.json
+++ b/package.json
@@ -5,12 +5,22 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "husky": "^4.3.8"
+    "husky": "^4.3.8",
+    "prettier": "^2.4.1"
+  },
+  "prettier": {
+    "printWidth": 120,
+    "singleQuote": true,
+    "arrowParens": "always",
+    "trailingComma": "all"
   },
   "husky": {
     "hooks": {
       "pre-commit": "bash version.sh",
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
     }
-  }
+  },
+  "*/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
+    "prettier --write"
+  ]
 }
