--- a/integrations/angular/tsconfig.json
+++ b/integrations/angular/tsconfig.json
@@ -19,7 +19,8 @@
     "lib": [
       "es2018",
       "dom"
-    ]
+    ],
+    "types": ["applepayjs"],
   },
   "angularCompilerOptions": {
     "strictInjectionParameters": true,
