fix: [PASCS-323] fix applepayjs missing in angular

--- a/integrations/angular/tsconfig.json
+++ b/integrations/angular/tsconfig.json
@@ -16,11 +16,7 @@
     "importHelpers": true,
     "target": "es2015",
     "module": "es2020",
-    "lib": [
-      "es2018",
-      "dom"
-    ],
-    "types": ["applepayjs"],
+    "lib": ["es2018", "dom"],
   },
   "angularCompilerOptions": {
     "strictInjectionParameters": true,
