fix: [PASCS-323] fix applepayjs missing in angular

--- a/integrations/angular/tsconfig.app.json
+++ b/integrations/angular/tsconfig.app.json
@@ -2,7 +2,7 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "outDir": "./out-tsc/app",
+    "outDir": "./out-tsc/app"
   },
   "files": [
     "src/main.ts",
