--- a/integrations/node/package.json
+++ b/integrations/node/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "keywords": [],
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.16.1",
     "typescript": "^3.3.3"
   },
@@ -19,6 +20,7 @@
     "@typescript-eslint/eslint-plugin": "^4.2.0",
     "@typescript-eslint/parser": "^4.2.0",
     "axios": "^0.20.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "eslint": "^7.9.0",
     "eslint-plugin-security": "^1.4.0",
