--- a/integrations/react-ts/package.json
+++ b/integrations/react-ts/package.json
@@ -14,7 +14,8 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.1"
+    "react-scripts": "4.0.1",
+    "uuid": "^9.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -36,6 +37,7 @@
   },
   "devDependencies": {
     "@types/react-router-dom": "^5.1.6",
+    "@types/uuid": "^8.3.4",
     "eslint": "^7.16.0",
     "eslint-plugin-prettier": "^3.3.0",
     "prettier": "^2.2.1",
