--- a/integrations/node/package.json
+++ b/integrations/node/package.json
@@ -10,15 +10,7 @@
   "author": "",
   "license": "ISC",
   "keywords": [],
-  "devDependencies": {
-    "@types/cors": "^2.8.12",
-    "@types/express": "^4.16.1",
-    "typescript": "^3.3.3"
-  },
   "dependencies": {
-    "@types/uuid": "^8.3.0",
-    "@typescript-eslint/eslint-plugin": "^4.2.0",
-    "@typescript-eslint/parser": "^4.2.0",
     "axios": "^0.20.0",
     "dotenv": "^8.2.0",
     "eslint": "^7.9.0",
@@ -26,5 +18,12 @@
     "express": "^4.16.4",
     "ts-node": "^10.3.1",
     "uuid": "^8.3.0"
+  },
+  "devDependencies": {
+    "@types/express": "^4.16.1",
+    "typescript": "^3.3.3",
+    "@types/uuid": "^8.3.0",
+    "@typescript-eslint/eslint-plugin": "^4.2.0",
+    "@typescript-eslint/parser": "^4.2.0"
   }
 }
