--- a/integrations/node/tsconfig.json
+++ b/integrations/node/tsconfig.json
@@ -7,6 +7,7 @@
     "baseUrl": "./src",
     "moduleResolution": "node",
     "esModuleInterop": true, 
+    "module": "ESNext",
     "allowSyntheticDefaultImports": true
   },
   "include": ["src/**/*.ts"],
